# songranker-backend

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  DEV_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  GLOBAL_RANKING_FLOW.md  LEADERBOARD_API_UPDATE.md  MASTER_PLAN.md  PLAN_IMAGE_GENERATION.md  Procfile  RANKING_PLAN.md  README.md  SPOTIFY_RATE_LIMITING.md  analyze_session.py  compound-engineering.local.md  debug_receipt.py  debug_rpc_v2.py  dev.sh  docker-compose.dev.yml  docker-compose.yml  embed_font.py  font_base64.txt  full_response.json  geist_base64.txt  geist_mono_base64.txt  inspect_lastfm.py  locustfile.py  main.py  pyproject.toml  run_session_ranking.py  search_output.json  simulate_pairing_v2.py  simulate_top5.py  simulate_top5_aggressive.py  supabase_feedback.sql  supabase_global_leaderboard.sql  (+11 more)
.opencode/command/: commit.md
app/: main.py  tasks.py
app/clients/: apple_music.py  lastfm.py  musicbrainz.py  spotify.py  supabase.py  supabase_db.py
app/core/: auth.py  cache.py  config.py  deduplication.py  global_ranking_config.py  global_ranking_utils.py  queue.py  ranking.py  track_selection.py  utils.py
app/schemas/: feedback.py  session.py
app/templates/: receipt.html
docs/: API.md  MIGRATIONS.md  SCHEMA.md  SETUP.md
scripts/: debug_env.py  export_openapi.py  generate_marquee_assets.py  inspect_supabase_data.py  simulate_ranking.py  simulate_ranking_dw.py  sync_api.sh  test_redis.py  verify_artist_popularity.py
todos/: 005-pending-p2-css-filter-performance.md  007-pending-p2-insecure-sandbox.md
(+23 files in other folders)
